force-app/main/default/objects/Fitness__c/Fitness__c.object-meta.xml
<CustomObject>
    <label>Fitness</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fitness</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>