force-app/main/default/objects/Fitness__c/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <label>Interest Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>