force-app/main/default/objects/Fitness__c/fields/Survey_Input__c.field-meta.xml
<CustomField>
    <fullName>Survey_Input__c</fullName>
    <label>Survey Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>