force-app/main/default/objects/Fitness__c/fields/Translated_Survey_Input__c.field-meta.xml
<CustomField>
    <fullName>Translated_Survey_Input__c</fullName>
    <label>Translated Survey Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>